--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hola Mundo
+<html>
+
+<head>
+    <title>Mi Perfil</title>
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="manifest" href="manifest.webmanifest">
+</head>
+
+<body>
+    <style>
+        body {
+            background-image: url('fondo.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+    <div style="color: rgb(10, 82, 72); width: 400px; margin-left: 46%; margin-top: 5%;">
+        <h2> Bea Jimenez </h2>
+        <p>
+
+        </p>
+    </div>
+</body>
+
+</html>
